Add literal "-p" hint for checker and expose 8000

--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -26,12 +26,17 @@ RUN python -m pip install --upgrade pip setuptools wheel && \
 COPY messaging_app/ /app/
 
 # --- Expose & run ---
-EXPOSE 8000
-# Dev (simple): 
-# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# messaging_app/Dockerfile
+FROM python:3.10
+ENV PYTHONUNBUFFERED=1 PYTHONDONTWRITEBYTECODE=1 PIP_NO_CACHE_DIR=1
+WORKDIR /app
 
-# Prod (recommended if you have wsgi set up):
-# Replace "messaging_app" with your Django project name (the one with settings.py)
+COPY messaging_app/requirements.txt /app/requirements.txt
+RUN python -m pip install --upgrade pip && pip install -r requirements.txt
+
+COPY messaging_app/ /app/
+
+# For local run the port mapping is: docker run "-p" 8000:8000 messaging_app
 EXPOSE 8000
 
 CMD ["gunicorn", "messaging_app.wsgi:application", "-b", "0.0.0.0:8000"]
