--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -31,7 +31,8 @@ services:
     environment:
       MYSQL_HOST: db
     command: >
-      bash -lc "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      bash -lc "python3 manage.py migrate &&
+                python3 manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
