--- a/messaging_app/requirements.txt
+++ b/messaging_app/requirements.txt
@@ -8,6 +8,8 @@ gunicorn==22.0.0
 whitenoise==6.7.0
 requests==2.31.0
 psycopg2-binary==2.9.9
-
-
 mysqlclient==2.2.4
+pytest>=7.0.0
+pytest-html>=3.0.0
+pytest-cov>=4.0.0
+pytest-django>=4.5.0
